# motd-generator

./: Cargo.toml
src/: loadavg.rs  main.rs  memory.rs  quote.rs  statfs.rs
