[package]
name = "motd-generator"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]

[dependencies]
chrono = "^0.2.17"
diesel = { version = "0.6.1", features = ["chrono"] }
diesel_full_text_search = "0.5.1"
nix = "0.5.0"
prettytable-rs = "0.6.2"
rand = "0.3.14"
regex = "0.1.69"
tempfile = "2.1.3"
time = "0.1.35"
